--- a/MC_030819/CSS/main.css
+++ b/MC_030819/CSS/main.css
@@ -32,7 +32,8 @@ main {
     background-color:  #fff; 
     padding: 20px auto;
     width: 100%;
-    margin-left:0;
+	margin: 10px 0;
+	/* margin-left:0;*/
     }
 main h2 {
     color: darkcyan;
@@ -135,9 +136,10 @@ body {
 
 footer {
     padding: 30px 0;
-    font-size: 0.75em;
+    font-size: 0.9em;
     text-align: center;
 	/* border-top: solid 30px #ededed;*/
+	margin-top: 10px;
 }
 
 #calculate, main {
@@ -155,7 +157,7 @@ footer {
 
 #amortTable {
     width: 90%;
-    margin: auto;
+    margin: 2px auto 10px;
     border: solid 2px;
 }
 #amortTable tr:nth-child(even) {
@@ -165,7 +167,7 @@ footer {
 #amortTable tr td:nth-child(3),
 #amortTable tr th:nth-child(3) {
     display: none;
-} 
+}
 
 article h3 {
     text-align: center;
@@ -229,7 +231,11 @@ button {
     #navigation li {
         display: inline-block;
         border: none;
-        
     }
+	#amortTable tr td:nth-child(3),
+    #amortTable tr th:nth-child(3) {
+    	display: table cell;
+	}
+
 }
 
