--- a/MC_030819/CSS/main.css
+++ b/MC_030819/CSS/main.css
@@ -2,9 +2,8 @@
 
 body {
     font-family: Helvetica, Verdana, sans-serif; 
-    /* font-family: Georgia, serif; */
-    /*background-color: rgb(200,200,200, 0.5);*/
-    margin: 10px auto;
+
+	background-color: white;
 }
 
 header, nav, main, article, aside, section, footer, video,
@@ -12,11 +11,11 @@ audio, figure { display: block; }
 
 .container {
    /* max-width: 960px;*/
-    background-color: lightblue;
-    box-sizing: border-box;
-    margin-left:0;
-    padding-left: 0;
+	margin: 0 auto;
+	background-color: #ededed; /*white; */
+	box-sizing: border-box;
 }
+
 h1 {
     color: darkcyan;
     text-align: center;
@@ -28,19 +27,10 @@ h1 {
                  3px 3px 5px #999;
     letter-spacing: 0.2em;
 }
-main {
-    background-color:  #fff; 
-    padding: 20px auto;
-    width: 100%;
-	margin: 10px 0;
-	/* margin-left:0;*/
-    }
-main h2 {
+h2 {
     color: darkcyan;
     font: bold 1.3 Arial;
-    /*font-size: 1.3em;*/
     text-align: center;
-   /* font-style: italic;*/
     letter-spacing: 0.1em;
 }
 
@@ -52,30 +42,29 @@ p {
 }
 
 header {
-   /* text-align: center;*/
-    position: relative;
+    text-align: center;
+	height: 120px;
+	position: relative;
+	background-color: lightblue;
+	border-bottom: solid 3px darkgray;
 }
 
-
-figure {
-    width: 15%;
-	height: auto;
-    float: left;
-/*
-    margin-right: 10px;
-*/
-}
+/*main {
+	clear: both;
+}*/
 img {
-    max-width: 100%;
-    height:auto;
+	max-width: 100%;
+	height: auto;
 }
-
-header img {
-    border: solid 3px darkcyan; 
+figure {
+	float: left;
+	width: 15%;
+	height:auto;
+	margin: 1%;
+}
+figure img {
+	border: solid 3px darkcyan;
     border-radius: 8px;
-    /*backface-visibility: hidden;*/
-	margin: 10px;
-    float: left;
 }
 
 /* Navigation - Hamburger menu for mobile */
@@ -86,15 +75,23 @@ nav.mainNav {
 }
 .mainNav ul {
     list-style-type: none;
+	margin: 0;
+	padding: 0;
 }
 .mainNav li {
     border-bottom: solid 1px #999;
+	text-transform: uppercase;
+	font-size: 1.1rem;
+	font-weight: bold;
 }
 .mainNav li a {
     display: block;
-    padding-left: 10px;
-    margin-top: 20px;
+    /*padding-left: 10px;*/
+    /*margin-top: 20px;*/
+	padding: 2% 0;
 	text-decoration: none;
+	color: grey; /*darkgoldenrod; */
+
 }
 #navigation nav {
     height: 0;
@@ -134,23 +131,25 @@ body {
 }
 /* End of Navigation */
 
+main {
+    clear: both;
+	background-color: #ededed;
+	padding: 15px 0;
+}
+
 footer {
     padding: 30px 0;
     font-size: 0.9em;
     text-align: center;
-	/* border-top: solid 30px #ededed;*/
-	margin-top: 10px;
-}
-
-#calculate, main {
-    clear: both;
+	background-color: lightblue;
+	border-top: solid 3px darkgray;
 }
 
 .formMortCalc, .formAmortTblCalc {
-    border: solid 2px;
-    border-radius: 10px;
+    border: solid 3px darkcyan;
+    border-radius: 15px;
     width: 90%;
-    margin: auto;
+    margin: 10px auto;
     background-color: azure;
     clear: both;
 }
@@ -169,7 +168,11 @@ footer {
     display: none;
 }
 
-article h3 {
+form {
+	margin-bottom: 10px;
+}
+
+h3 {
     text-align: center;
     letter-spacing: 0.1em; 
     color: darkcyan;
@@ -190,9 +193,10 @@ article p {
   padding-left: 10px;
 }
 
-section {
+/*section {
     margin-top: 1.3em;
-}
+	background-color: red;
+}*/
 
 button {
      padding: 5px;
@@ -210,27 +214,34 @@ button {
     clear: both;
 }
 @media screen and (min-width: 580px) {
-    /*header h1 {
-        top: 80%;
-    }*/
+
 	#navigation nav {
-/*		width: 100%;
-		margin-right: 0;*/
+		width: 100%;
+		margin-right: 0;
+		background-color: lightblue;
 	}
 	.mainNav ul {
-		float: right;
-		margin-right: 10px;
+		height: 120px;
+		display: flex;
+		align-items: center;
+		justify-content: space-around;
+		/*float: right;
+		margin-right: 10px;*/
     }
+
     #navigation label {
         display: none;
     }
     #navigation nav {
         height: auto;
         overflow: visible;
-    }
+	}
     #navigation li {
-        display: inline-block;
-        border: none;
+        border: solid 2px darkcyan;
+		padding: 1%;
+		width: 16%;
+		border-radius: 8px;
+		background-color: azure;
     }
 	#amortTable tr td:nth-child(3),
     #amortTable tr th:nth-child(3) {
