--- a/MC_030819/CSS/main.css
+++ b/MC_030819/CSS/main.css
@@ -36,9 +36,10 @@ h2 {
 
 p {
     color: black;
-    margin: 10px 10px;
+    margin: 10px 20px 20px;
     text-align: center;
     line-height: 1.5em;
+	font-size: 1.2em;
 }
 
 header {
@@ -162,9 +163,12 @@ footer {
 #amortTable tr th:nth-child(3) {
     display: none;
 }
-
+article[class^="form"] {
+  width: 50%;
+}
 form {
 	margin-bottom: 10px;
+	width: 50%;
 }
 
 h3 {
@@ -192,6 +196,34 @@ article p {
     margin-top: 1.3em;
 	background-color: red;
 }*/
+
+ul.accordion {
+	width: 90%;
+	height: auto;
+	margin: 0 auto;
+	list-style: none;
+	/*border: solid 2px #000;*/
+	padding: 0 30px;
+}
+.accordion h3 {
+	background-color: rgba(0,139,139,.9); /* darkcyan; */
+	color: #fff;
+	padding: 5px 10px;
+	border-radius: 5px;
+	text-align: left;
+}
+.accordion h3 i {
+	margin-right: 15px;
+	background: none;
+/*	background-color: #fff;*/
+	color: #fff; /* darkcyan; */
+	padding: 1px 3px;
+	/*width: 100px;
+	height: 100px;*/
+}
+.accordion p {
+	display: none;
+}
 
 button {
      padding: 5px;
