--- a/MC_030819/CSS/main.css
+++ b/MC_030819/CSS/main.css
@@ -2,8 +2,8 @@
 
 body {
     font-family: Helvetica, Verdana, sans-serif; 
+	background-color: #fff;
 
-	background-color: white;
 }
 
 header, nav, main, article, aside, section, footer, video,
@@ -14,6 +14,8 @@ audio, figure { display: block; }
 	margin: 0 auto;
 	background-color: #ededed; /*white; */
 	box-sizing: border-box;
+	width: 100%;
+	min-height: 100vh;
 }
 
 h1 {
@@ -29,9 +31,16 @@ h1 {
 }
 h2 {
     color: darkcyan;
-    font: bold 1.3 Arial;
+    font: 2.0em;
     text-align: center;
     letter-spacing: 0.1em;
+}
+
+h3 {
+    text-align: center;
+	font-size: 1.4em;
+    letter-spacing: 0.1em;
+    color: darkcyan;
 }
 
 p {
@@ -56,11 +65,11 @@ img {
 }
 header img {
     float: left;
-	max-width: 15%;
+	max-width: 20%;
 	max-height: 120px; /* 120px; */
 	border: solid 3px darkcyan;
     border-radius: 8px;
-    margin: 1%;
+    margin: 3%;
 }
 
 /* Navigation - Hamburger menu for mobile */
@@ -97,7 +106,7 @@ nav.mainNav {
 body {
     -webkit-animation: bugfix infinite 1s;
 }
-@webkit-keyframes bugfix {
+@-webkit-keyframes bugfix {
     from { padding: 0;}
     to { padding: 0;}
 }
@@ -125,31 +134,93 @@ body {
     height: auto;
     overflow: hidden;
 }
+#navigation li:hover {
+	background-color: floralwhite;
+}
+#navigation li a:hover {
+	color: darkcyan;
+}
+#navigation li.active {
+	background-color: darkcyan;
+}
+.mainNav li.active a {
+	color: #fff;
+}
+
 /* End of Navigation */
 
 main {
     clear: both;
 	background-color: #ededed;
 	padding: 15px 0;
+
 }
 
 footer {
-    padding: 30px 0;
-    font-size: 0.9em;
-    text-align: center;
-	background-color: lightblue;
+	padding: 5px 0;
+    background-color: lightblue;
 	border-top: solid 3px darkgray;
 }
-
-.formMortCalc, .formAmortTblCalc {
-    border: solid 3px darkcyan;
-    border-radius: 15px;
-    width: 90%;
-    margin: 10px auto;
-    background-color: azure;
-    clear: both;
+footer p {
+	font-size: 1em;
+	font-weight: normal;
 }
 
+article[class^="form"] {
+/*.formMortCalc, .formAmortTblCalc */
+    border: solid 3px darkcyan;
+    border-radius: 15px;
+    width: 80%;
+	height: auto;
+    margin: 20px auto;
+	padding: 0 20px;
+    background-color: azure;
+	padding-bottom: 30px;
+    clear: both;
+
+}
+article[class^="form"] label {
+	font-weight: bold;
+	text-align: left;
+	display: block;
+	width: 100%;
+	/*width: 50%;*/  /* 40%; */
+	float: left;
+	margin-bottom: 10px;
+	clear: both;
+}
+.formMortCalc {
+	/*font-size: 1.2em;*/
+}
+/*.formMortCalc label {
+	width: 40%;
+}*/
+
+/*article.inGrp*/
+form.inGrp {
+	font-size: 1.1em;
+}
+
+input {
+    padding-left: 4px;
+    text-align: left;
+}
+input[type=text], input[type=date] {
+	width: 100%; /* 48%; */ /*58%;*/
+	float: right;
+	margin-bottom: 10px;
+}
+input[type=radio] {
+	margin-right: 5px;
+}
+/*
+.formMortCalc {
+	width: 58%;
+}
+*/
+input:last-of-type {
+	margin-bottom: 20px;
+}
 #amortTable {
     width: 90%;
     margin: 2px auto 10px;
@@ -163,23 +234,13 @@ footer {
 #amortTable tr th:nth-child(3) {
     display: none;
 }
-article[class^="form"] {
-  width: 50%;
-}
-form {
+
+/*form {
 	margin-bottom: 10px;
 	width: 50%;
-}
+}*/
 
-h3 {
-    text-align: center;
-    letter-spacing: 0.1em; 
-    color: darkcyan;
-}
-input {
-    padding-left: 4px;
-    text-align: left;
-}
+
 
 #outMonthly {
    /* background-color: lemonchiffon;*/
@@ -206,8 +267,9 @@ ul.accordion {
 	padding: 0 30px;
 }
 .accordion h3 {
-	background-color: rgba(0,139,139,.9); /* darkcyan; */
+	background-color: rgba(0,139,139,.8); /* darkcyan; */
 	color: #fff;
+	font-size: 1em;
 	padding: 5px 10px;
 	border-radius: 5px;
 	text-align: left;
@@ -226,9 +288,14 @@ ul.accordion {
 }
 
 button {
-     padding: 5px;
+	 padding: 5px;
      background-color: darkcyan;
      color: lightcyan;
+}
+#btnCalc {
+	 display: block;
+     margin: 10px auto;
+
 }
 #otherBtn {
     border: none;
@@ -240,7 +307,15 @@ button {
 .clearIt {
     clear: both;
 }
+
+@media screen and (min-width: 450px) {
+}
 @media screen and (min-width: 580px) {
+
+	header img {
+	   	max-width: 15%;
+	   	margin: 1%;
+}
 
 	#navigation nav {
 		width: 100%;
@@ -249,6 +324,7 @@ button {
 	}
 	.mainNav ul {
 		height: 120px;
+		width: auto;
 		display: flex;
 		align-items: center;
 		justify-content: space-around;
@@ -266,14 +342,52 @@ button {
     #navigation li {
         border: solid 2px darkcyan;
 		padding: 1%;
-		width: 16%;
+		width: 18%;
 		border-radius: 8px;
 		background-color: azure;
+		font-size: .9em;
     }
 	#amortTable tr td:nth-child(3),
     #amortTable tr th:nth-child(3) {
     	display: table cell;
 	}
+	article[class^="form"] label {
+		width: 50%; /* 40%; */
+	}
+	input[type=text], input[type=date] {
+	    width: 48%; /*58%;*/
+	}
+	footer {
+		position: fixed;
+		width: 100%;
+		bottom: 0;
+	}
+	.accordion h3 {
+		font-size: 1.2em;
+	}
+}
+@media screen and (min-width: 768px) {
+	 #navigation li {
+       	width: 16%;
+		font-size: 1em;
+    }
+
 
 }
-
+@media screen and (min-width: 850px) {
+	article[class^="form"] {
+		width: 50%;
+	}
+	#navigation li {
+       	padding: .5em;
+	}
+	.accordion h3 {
+		width: 80%;
+		margin: 15px auto;
+	}
+}
+@media screen and (min-width: 1000px) {
+	.accordion h3 {
+		width: 60%;
+	}
+}
