--- a/MC_030819/CSS/main.css
+++ b/MC_030819/CSS/main.css
@@ -12,7 +12,7 @@ audio, figure { display: block; }
 .container {
    /* max-width: 960px;*/
 	margin: 0 auto;
-	background-color: #ededed; /*white; */
+	background-color: #f1f1f1; /*#ededed; white; */
 	box-sizing: border-box;
 	width: 100%;
 	min-height: 100vh;
@@ -151,7 +151,7 @@ body {
 
 main {
     clear: both;
-	background-color: #ededed;
+	background-color: #f1f1f1; /* #ededed;*/
 	padding: 15px 0;
 
 }
@@ -227,9 +227,8 @@ input:last-of-type {
     border: solid 2px;
 }
 #amortTable tr:nth-child(even) {
-    background-color: azure; /* #ededed; */
+    background-color: azure;
 }
-
 #amortTable tr td:nth-child(3),
 #amortTable tr th:nth-child(3) {
     display: none;
@@ -265,14 +264,20 @@ ul.accordion {
 	list-style: none;
 	/*border: solid 2px #000;*/
 	padding: 0 30px;
+	background: none;
+
 }
 .accordion h3 {
 	background-color: rgba(0,139,139,.8); /* darkcyan; */
 	color: #fff;
 	font-size: 1em;
 	padding: 5px 10px;
-	border-radius: 5px;
+	border-radius: 5px 5px 0 0 ;
+	border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+	/*border-radius: 5px;*/
 	text-align: left;
+	margin-bottom: 0;
 }
 .accordion h3 i {
 	margin-right: 15px;
@@ -283,8 +288,16 @@ ul.accordion {
 	/*width: 100px;
 	height: 100px;*/
 }
-.accordion p {
+ul.accordion p {
 	display: none;
+	width: !inherit;
+	border: solid 1px rgba(0,139,139,.8);
+    padding: 1em;
+	font-size: 1em;
+	margin: 0;
+	border-top: none;
+	border-radius: 0 0 10px 10px;
+	background-color: azure;
 }
 
 button {
@@ -362,7 +375,11 @@ button {
 		width: 100%;
 		bottom: 0;
 	}
-	.accordion h3 {
+	ul.accordion h3 {
+		padding: 1em;
+		font-size: 1.3em;
+	}
+	ul.accordion p {
 		font-size: 1.2em;
 	}
 }
@@ -381,13 +398,12 @@ button {
 	#navigation li {
        	padding: .5em;
 	}
-	.accordion h3 {
+	ul.accordion {
 		width: 80%;
-		margin: 15px auto;
 	}
 }
 @media screen and (min-width: 1000px) {
-	.accordion h3 {
+	ul.accordion  {
 		width: 60%;
 	}
 }
