--- a/MC_030819/CSS/main.css
+++ b/MC_030819/CSS/main.css
@@ -153,7 +153,6 @@ main {
     clear: both;
 	background-color: #f1f1f1; /* #ededed;*/
 	padding: 15px 0;
-
 }
 
 footer {
@@ -263,7 +262,7 @@ ul.accordion {
 	margin: 0 auto;
 	list-style: none;
 	/*border: solid 2px #000;*/
-	padding: 0 30px;
+	padding: 0 30px 30px;
 	background: none;
 
 }
@@ -369,6 +368,9 @@ button {
 	}
 	input[type=text], input[type=date] {
 	    width: 48%; /*58%;*/
+	}
+	main {
+    	padding: 15px 0 70px;
 	}
 	footer {
 		position: fixed;
