--- a/MC_030819/CSS/main.css
+++ b/MC_030819/CSS/main.css
@@ -63,14 +63,15 @@ img {
 	max-width: 100%;
 	height: auto;
 }
+
 header img {
     float: left;
 	max-width: 20%;
-	max-height: 120px; /* 120px; */
-	border: solid 3px darkcyan;
+	max-height: 90px; /* 120px; */
+	border: solid 2px darkcyan;
     border-radius: 8px;
     margin: 3%;
-}
+   }
 
 /* Navigation - Hamburger menu for mobile */
 
@@ -411,10 +412,10 @@ div a img {
         overflow: visible;
 	}
     #navigation li {
-        border: solid 2px darkcyan;
+        /*border: solid 2px darkcyan;*/
 		padding: 1%;
 		width: 18%;
-		border-radius: 8px;
+		border-radius: 5px;
 		background-color: azure;
 		font-size: .9em;
     }
