added print.css and print button

--- a/MC_030819/CSS/main.css
+++ b/MC_030819/CSS/main.css
@@ -43,6 +43,11 @@ h3 {
     color: darkcyan;
 }
 
+.prtBtn {
+    color: darkcyan;
+    margin-left: 20px;
+}
+
 p {
     color: black;
     margin: 10px 20px 20px;
